Project

General

Profile

Actions

Bug #46614

closed

rgw lc expiration header returns although it should not

Added by Or Friedmann almost 4 years ago. Updated over 3 years ago.

Status:
Resolved
Priority:
Low
Assignee:
Or Friedmann
Target version:
-
% Done:

0%

Source:
Community (user)
Tags:
Backport:
nautilus octopus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Reproduce:

Create lc policy that expires object by 2 tags (And inside the Filter) a=b b=a
put object with single tag a=b
head that object and you will get that rule although lc will not be applied on that object


Related issues 2 (0 open2 closed)

Copied to rgw - Backport #47959: nautilus: rgw lc expiration header returns although it should notResolvedNathan CutlerActions
Copied to rgw - Backport #47960: octopus: rgw lc expiration header returns although it should notResolvedNathan CutlerActions
Actions #1

Updated by Or Friedmann almost 4 years ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 36199
Actions #2

Updated by Or Friedmann over 3 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Nathan Cutler over 3 years ago

  • Copied to Backport #47959: nautilus: rgw lc expiration header returns although it should not added
Actions #4

Updated by Nathan Cutler over 3 years ago

  • Copied to Backport #47960: octopus: rgw lc expiration header returns although it should not added
Actions #5

Updated by Nathan Cutler over 3 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF