rgw: fix expiration header returned even if there is only one tag in the object the same as the rule

Expiration header returned even if there is only one tag in the object the same as the rule

Signed-off-by: Or Friedmann <ofriedma@redhat.com>
Reported-by: Avi Mor <avmor@redhat.com>

Fixes: https://tracker.ceph.com/issues/46614